--- a/Technic/style.css
+++ b/Technic/style.css
@@ -221,6 +221,8 @@ svg * {
 	--button-medium: 44px;
 	--button-big: clamp(50px, 3.88vw, 56px);
 
+	--input-padding: clamp(6px, 1.11vw, 16px) clamp(10px, 1.38vw, 20px);
+	--input-height: clamp(50px, 3.88vw, 56px);
 	--container-width: 1110px;
 	--container-padding-x: 15px;
 
@@ -232,6 +234,7 @@ svg * {
 body {
 	font-family: var(--font-family-base);
 	background-color: var(--color-white);
+	color: var(--color-white);
 	font-size: 18px;
 	font-weight: 500;
 	line-height: 1.33;
@@ -275,6 +278,7 @@ a {
 
 .title-medium {
 	font-size: clamp(20px, 3.33vw, 48px);
+	font-weight: 700;
 }
 
 h1,
@@ -301,7 +305,8 @@ h6 {
 	height: var(--button-big);
 	border: none;
 	border-radius: var(--border-radius);
-	font-size: clamp(15px, 1.04vw, 18px);
+	white-space: nowrap;
+	font-size: clamp(15px, 1.25vw, 18px);
 }
 
 .button-yellow {
@@ -337,6 +342,19 @@ h6 {
 
 .is-blue {
 	color: #1a236e
+}
+
+.input {
+	font-family: var(--font-family-base);
+	padding: var(--input-padding);
+	height: var(--input-height);
+	border: none;
+	border-radius: var(--border-radius);
+}
+
+.input::placeholder {
+	font-weight: 700;
+	color: var(--color-dark-light);
 }
 
 
@@ -612,6 +630,71 @@ h6 {
 }
 
 
+.order {
+	background: url(./image/order/bg.jpg) center/cover no-repeat;
+}
+
+.order-wrapper {
+	padding: clamp(20px, 6.94vw, 100px);
+	display: flex;
+	flex-direction: column;
+	row-gap: clamp(20px, 2.77vw, 40px);
+	align-items: center;
+	font-family: var(--font-family-accent);
+}
+
+.order-header {
+	display: flex;
+	flex-direction: column;
+	row-gap: 16px;
+	align-items: center;
+	text-align: center;
+}
+
+.order-description {
+	font-weight: 600;
+	font-size: 18px;
+}
+
+
+.order-body {
+	max-width: 482px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.order-form {
+	display: flex;
+	column-gap: 16px;
+	margin-bottom: clamp(12px, 1.66vw, 24px);
+}
+
+.order-button {
+	padding-block: 16px;
+	font-weight: 700;
+}
+
+.order-body-description {
+	text-align: center;
+	font-weight: 600;
+	font-size: 15px;
+}
+
+
+.order-body-description span {
+	color: var(--color-opacity-white);
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -743,5 +826,14 @@ h6 {
 	.reviews-button-left,
 	.reviews-button-right {
 		display: none;
+	}
+
+	.order-input-number {
+		max-width: 160px;
+		font-size: 15px;
+	}
+
+	.order-input-number::placeholder {
+		font-size: 15px;
 	}
 }
