--- a/Technic/style.css
+++ b/Technic/style.css
@@ -357,7 +357,20 @@ h6 {
 	color: var(--color-dark-light);
 }
 
+.input:focus {
+	color: #1a236e;
+	outline: 2px solid #ff3a23;
+}
 
+.approval-text {
+	text-align: center;
+	font-weight: 600;
+	font-size: 15px;
+}
+
+.approval-text span {
+	color: var(--color-opacity-white);
+}
 
 
 
@@ -675,16 +688,6 @@ h6 {
 	font-weight: 700;
 }
 
-.order-body-description {
-	text-align: center;
-	font-weight: 600;
-	font-size: 15px;
-}
-
-
-.order-body-description span {
-	color: var(--color-opacity-white);
-}
 
 
 .team-wrapper {
@@ -804,6 +807,113 @@ h6 {
 	width: 100%;
 }
 
+.abilities {
+	padding-block: clamp(40px, 8.33vw, 120px);
+}
+
+.abilities-wrapper {
+	display: flex;
+	flex-direction: column;
+	row-gap: clamp(25px, 4.44vw, 64px);
+}
+
+.abilities-title {
+	text-align: center;
+}
+
+.abilities-list {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	gap: clamp(15px, 2.08vw, 30px);
+}
+
+.abilities-item {
+	display: flex;
+	justify-content: center;
+}
+
+
+.feedback {
+	padding-block: clamp(30px, 6.94vw, 100px);
+	background: url(./image/feedback/bg.jpg) center/cover no-repeat;
+	display: flex;
+	flex-direction: column;
+	row-gap: clamp(15px, 2.77vw, 40px);
+	justify-content: center;
+	align-items: center;
+}
+
+.feedback-header {
+	text-align: center;
+}
+
+.feedback-title {
+	margin-bottom: 16px;
+}
+
+.feedback-description {
+	font-size: 18px;
+}
+
+.feedback-form {
+	display: flex;
+	column-gap: 10px;
+	row-gap: 20px;
+	margin-bottom: 24px;
+}
+
+.feedback-form-button {
+	background-color: #ff3a23;
+	color: var(--color-white);
+}
+
+
+.feedback-form-button:hover {
+	background-color: #ffffff;
+	color: #ff3a23;
+	outline: 2px solid #ff3a23;
+}
+
+
+
+.contract {
+	padding: clamp(40px, 6.94vw, 100px);
+	display: flex;
+	flex-direction: column;
+	row-gap: clamp(20px, 2.77vw, 40px);
+}
+
+.contract-header,
+.contract-body {
+	max-width: 540px;
+}
+
+.contract-header {
+	text-align: center;
+}
+
+.contract-title {
+	margin: bottom 16px;
+}
+
+.contract-subtitle {
+	color: var(--color-opacity-white);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -874,6 +984,10 @@ h6 {
 		height: 50px;
 	}
 
+	.abilities-list {
+		column-gap: 0px;
+	}
+
 
 	.trust-us-list {
 		grid-template-columns: repeat(2, 0.8fr);
@@ -886,6 +1000,26 @@ h6 {
 		width: 180px;
 		height: 180px;
 
+	}
+
+	.abilities-list {
+		grid-template-columns: repeat(2, 1fr);
+	}
+
+
+	.feedback {
+		padding-inline: 15px;
+	}
+
+
+	.feedback-form {
+		display: grid;
+		grid-template-columns: repeat(2, 250px);
+		justify-content: center;
+	}
+
+	.feedback-form-button {
+		justify-content: center;
 	}
 }
 
@@ -989,6 +1123,20 @@ h6 {
 	.team-image {
 		width: 145px;
 		height: 145px;
+	}
 
+	.abilities-list {
+		grid-template-columns: 1fr;
+	}
+
+
+	.feedback-title {
+		margin-bottom: 12px;
+	}
+
+	.feedback-form {
+		row-gap: 10px;
+		grid-template-columns: 250px;
+		margin-bottom: 15px;
 	}
 }
