--- a/Positivus-site/styles/_globals.scss
+++ b/Positivus-site/styles/_globals.scss
@@ -4,7 +4,7 @@ body {
   font-family: var(--font-family-base);
   font-weight: 400;
   line-height: 1.28;
-  color: var(--color-dark);
+  color: var(--color-black);
   background-color: var(--color-light);
 }
 
