--- a/Positivus-site/styles/_variables.scss
+++ b/Positivus-site/styles/_variables.scss
@@ -1,5 +1,6 @@
 :root {
   --color-dark: #191a23;
+	--color-black:#000000
   --color-dark-alt: #292a32;
   --color-light: #ffffff;
   --color-accent: #b9ff66;
@@ -23,4 +24,12 @@
   --button-height: 68px;
 
   --transition-duration: 0.2s;
+
+	@include desktop { 
+		--section-padding-y:50px;
+
+	}@include mobile { 
+		--section-padding-y:30px;
+		
+	}
 }
