--- a/Positivus-site/styles/style.scss
+++ b/Positivus-site/styles/style.scss
@@ -1,5 +1,5 @@
 @import "normalize", "fonts", "mixins", "media", "variables", "utils", "globals";
 
-@import "blocks/burger-button", "blocks/button", "blocks/header",
+@import "blocks/burger-button","blocks/grid", "blocks/button", "blocks/header",
   "blocks/cross-button", "blocks/mobile-overlay", "blocks/section",
-  "blocks/hero";
+  "blocks/hero", "blocks/services", 'blocks/banner', "blocks/puddle-bg",'blocks/service-card', "blocks/studies";
